// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavedObjectSaveModal should render matching snapshot 1`] = `
<EuiModal
  className="kbnSavedObjectSaveModal"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <h1>
        <FormattedMessage
          defaultMessage="Save {objectType}"
          id="savedObjects.saveModal.saveTitle"
          values={
            Object {
              "objectType": "visualization",
            }
          }
        />
      </h1>
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Title"
            id="savedObjects.saveModal.titleLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiFieldText
          autoFocus={true}
          data-test-subj="savedObjectTitle"
          fullWidth={true}
          isInvalid={false}
          onChange={[Function]}
          value="Saved Object title"
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Description"
            id="savedObjects.saveModal.descriptionLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiTextArea
          data-test-subj="viewDescription"
          onChange={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiButtonEmpty
      data-test-subj="saveCancelButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="savedObjects.saveModal.cancelButtonLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
    <EuiButton
      color="primary"
      data-test-subj="confirmSaveSavedObjectButton"
      fill={true}
      form="generated-id_form"
      isDisabled={false}
      isLoading={false}
      size="m"
      type="submit"
    >
      Save
    </EuiButton>
  </EuiModalFooter>
</EuiModal>
`;

exports[`SavedObjectSaveModal should render matching snapshot when custom isValid is set 1`] = `
<EuiModal
  className="kbnSavedObjectSaveModal"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <h1>
        <FormattedMessage
          defaultMessage="Save {objectType}"
          id="savedObjects.saveModal.saveTitle"
          values={
            Object {
              "objectType": "visualization",
            }
          }
        />
      </h1>
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Title"
            id="savedObjects.saveModal.titleLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiFieldText
          autoFocus={true}
          data-test-subj="savedObjectTitle"
          fullWidth={true}
          isInvalid={false}
          onChange={[Function]}
          value="Saved Object title"
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Description"
            id="savedObjects.saveModal.descriptionLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiTextArea
          data-test-subj="viewDescription"
          onChange={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiButtonEmpty
      data-test-subj="saveCancelButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="savedObjects.saveModal.cancelButtonLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
    <EuiButton
      color="primary"
      data-test-subj="confirmSaveSavedObjectButton"
      fill={true}
      form="generated-id_form"
      isDisabled={true}
      isLoading={false}
      size="m"
      type="submit"
    >
      Save
    </EuiButton>
  </EuiModalFooter>
</EuiModal>
`;

exports[`SavedObjectSaveModal should render matching snapshot when custom isValid is set 2`] = `
<EuiModal
  className="kbnSavedObjectSaveModal"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <h1>
        <FormattedMessage
          defaultMessage="Save {objectType}"
          id="savedObjects.saveModal.saveTitle"
          values={
            Object {
              "objectType": "visualization",
            }
          }
        />
      </h1>
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Title"
            id="savedObjects.saveModal.titleLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiFieldText
          autoFocus={true}
          data-test-subj="savedObjectTitle"
          fullWidth={true}
          isInvalid={false}
          onChange={[Function]}
          value="Saved Object title"
        />
      </EuiFormRow>
      <EuiFormRow
        describedByIds={Array []}
        display="row"
        fullWidth={true}
        hasChildLabel={true}
        hasEmptyLabelSpace={false}
        label={
          <FormattedMessage
            defaultMessage="Description"
            id="savedObjects.saveModal.descriptionLabel"
            values={Object {}}
          />
        }
        labelType="label"
      >
        <EuiTextArea
          data-test-subj="viewDescription"
          onChange={[Function]}
          value=""
        />
      </EuiFormRow>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiButtonEmpty
      data-test-subj="saveCancelButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="savedObjects.saveModal.cancelButtonLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
    <EuiButton
      color="primary"
      data-test-subj="confirmSaveSavedObjectButton"
      fill={true}
      form="generated-id_form"
      isDisabled={false}
      isLoading={false}
      size="m"
      type="submit"
    >
      Save
    </EuiButton>
  </EuiModalFooter>
</EuiModal>
`;

exports[`SavedObjectSaveModal should render matching snapshot when given options 1`] = `
<EuiModal
  className="kbnSavedObjectSaveModal kbnSavedObjectsSaveModal--wide"
  data-test-subj="savedObjectSaveModal"
  onClose={[Function]}
>
  <EuiModalHeader>
    <EuiModalHeaderTitle>
      <h1>
        <FormattedMessage
          defaultMessage="Save {objectType}"
          id="savedObjects.saveModal.saveTitle"
          values={
            Object {
              "objectType": "visualization",
            }
          }
        />
      </h1>
    </EuiModalHeaderTitle>
  </EuiModalHeader>
  <EuiModalBody>
    <EuiForm
      component="form"
      id="generated-id_form"
      onSubmit={[Function]}
    >
      <EuiFlexGroup
        gutterSize="m"
      >
        <EuiFlexItem>
          <EuiFormRow
            describedByIds={Array []}
            display="row"
            fullWidth={true}
            hasChildLabel={true}
            hasEmptyLabelSpace={false}
            label={
              <FormattedMessage
                defaultMessage="Title"
                id="savedObjects.saveModal.titleLabel"
                values={Object {}}
              />
            }
            labelType="label"
          >
            <EuiFieldText
              autoFocus={true}
              data-test-subj="savedObjectTitle"
              fullWidth={true}
              isInvalid={false}
              onChange={[Function]}
              value="Saved Object title"
            />
          </EuiFormRow>
          <EuiFormRow
            describedByIds={Array []}
            display="row"
            fullWidth={true}
            hasChildLabel={true}
            hasEmptyLabelSpace={false}
            label={
              <FormattedMessage
                defaultMessage="Description"
                id="savedObjects.saveModal.descriptionLabel"
                values={Object {}}
              />
            }
            labelType="label"
          >
            <EuiTextArea
              data-test-subj="viewDescription"
              onChange={[Function]}
              value=""
            />
          </EuiFormRow>
          <div>
            Hello! Main options
          </div>
        </EuiFlexItem>
        <EuiFlexItem>
          <div>
            Hey there! Options on the right
          </div>
        </EuiFlexItem>
      </EuiFlexGroup>
    </EuiForm>
  </EuiModalBody>
  <EuiModalFooter>
    <EuiButtonEmpty
      data-test-subj="saveCancelButton"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Cancel"
        id="savedObjects.saveModal.cancelButtonLabel"
        values={Object {}}
      />
    </EuiButtonEmpty>
    <EuiButton
      color="primary"
      data-test-subj="confirmSaveSavedObjectButton"
      fill={true}
      form="generated-id_form"
      isDisabled={false}
      isLoading={false}
      size="m"
      type="submit"
    >
      Save
    </EuiButton>
  </EuiModalFooter>
</EuiModal>
`;
